Styled main view. Need to fix page layout bug when dropdown appears

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,11 +1,129 @@
-form{
-  .ui-helper-hidden-accessible{
-    display: none;
-  }
-}
+$padding_large : 10px;
+$padding_med: 5px;
+$padding_small : 2px;
+$font_family : 'Lato', sans-serif;
+$font_color : rgba(110, 110, 110, 1);
 
-ul.ui-autocomplete{
-  width: 500px;
-  background: white;
-  border: solid black 1px;
+body{
+  font-family: $font_family;
+  font-size: 16px;
+  color: $font_color;
+  position:relative;
+
+  main{
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: block;
+    margin: auto;
+    width: 650px;
+    height: 350px;
+
+    h1{
+      font-size: 50px;
+      color: rgba(80, 80, 80, 1);
+    }
+    form{
+      .ui-helper-hidden-accessible{
+        display: none;
+      }
+
+      label{
+        font-weight: bold;
+        display: inline-block;
+        width: 125px;
+      }
+
+      input{
+        width: 500px;
+      }
+      input[type=text]{
+        padding: $padding_med $padding_large;
+        border-image: none;
+        outline-color: rgba(180, 180, 180, 1);
+        outline-offset: -2px;
+        outline-style: auto;
+        outline-width: 5px;
+        &:focus{
+          outline-color: #52EDC7;
+          box-shadow: rgba(0,0,0,.07) 0 1px 4px 0 inset, rgba(54, 127, 235, .65) 0 0 7px 0;
+        }
+      }
+
+      input[type=button]{
+        display: block;
+        margin: $padding_large auto;
+
+        background-color: rgb(54, 127, 235);
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+        border-image-outset: 0px;
+        border-image-repeat: stretch;
+        border-image-slice: 100%;
+        border-image-source: none;
+        border-image-width: 1;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        border-color: rgb(48, 111, 207);
+        border-style: solid;
+        border-width: 1px;
+
+        box-shadow: rgba(255, 255, 255, 0.239216) 0px 1px 0px 0px inset, rgb(17, 120, 238) 0px 1px 0px 0px;
+        box-sizing: border-box;
+        color: rgb(255, 255, 255);
+
+        height: 49px;
+        line-height: 20px;
+
+        padding: 14px 12px 13px 12px;
+
+        text-align: center;
+        text-decoration: none;
+        text-shadow: rgba(0, 0, 0, 0.239216) 0px 1px 0px;
+        transition-delay: 0s;
+        transition-duration: 0.2s;
+        transition-property: all;
+        transition-timing-function: ease;
+
+        &:hover{
+          border-color: #438bf7;
+          background-color: #4d94ff;
+          text-shadow: rgba(0,0,0,0.24) 0 1px 0;
+          // border-color: #2b80ff;
+          // border-width: 1px;
+          // box-shadow: rgba(0,0,0,.07) 0 1px 4px 0 inset, rgba(54, 127, 235, .70) 0 0 7px 0;
+
+        }
+      }
+
+
+      span#result{
+        margin-left:$padding_large;
+      }
+
+    }
+  }
+  ul.ui-autocomplete{
+    width: 400px;
+    background: white;
+    border: {
+      color: rgba(160, 160, 160, 1);
+      style: solid;
+      width: 1px;
+    }
+
+    padding: $padding_small 0;
+
+    li.ui-menu-item{
+      list-style: none;
+
+      a{
+        display: block;
+        padding: $padding_small $padding_large;
+        &.ui-state-focus{
+          background-color: #F3F2F2;
+        }
+      }
+    }
+
+  }
 }
